Implementace změny daňové logiky